--- a/src/Routes/Product.css
+++ b/src/Routes/Product.css
@@ -1,10 +1,3 @@
-.Product-container{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    width: 90%;
-}
 .topBar-container{
     width: 100%;
     height: 33px;
@@ -30,7 +23,6 @@
     width: 100%;
     height: fit-content;
     display: flex;
-    flex-wrap: wrap;
     gap: 20px;
 
 }
@@ -40,6 +32,7 @@
     gap: 20px;
     flex: 2;
     width: 100%;
+    min-width: 250px;
 }
 
 .gallery-images-container{
@@ -47,14 +40,13 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
-    width: 143px;
+    width: 120px;
+    min-width: 130px;
     height: 100%;
     
 }
 .image-gallery{
     width: 100%;
-    height: 148px;
-    border: none;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
@@ -63,7 +55,7 @@
 }
 .imageFocus-container{
     width: 429px;
-    height: 642px;
+    height: 500px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -79,12 +71,14 @@
     flex: 3;
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 .product-description-container{
     display: flex;
     justify-content: space-between;
     gap: 20px;
     width: 100%;
+    min-width: 300px;
 }
 .productDescription-title{
     font-family: 'Open Sans Semibold';
@@ -104,6 +98,7 @@
     justify-content: space-between; 
     gap: 20px; 
     width: 100%;
+    flex: 2;
 }
 .productDescription-column-two{
     display: flex;
@@ -111,6 +106,7 @@
     align-items: flex-end;
     flex-wrap: wrap;
     width: 100%;
+    flex: 1;
 }
 .productDescription-price{
     font-family: 'Open Sans Bold';
@@ -135,11 +131,12 @@
     margin-top: 50px;
 }
 .section-text-description{
-    height: 150px;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 5px;
+    margin: 20px 0px;
 }
 .description-text{
     color: #2B3445;
@@ -152,6 +149,13 @@
 }
 .description-text.small{
     font-size: 12px;
+}
+.description-text.strong{
+    font-family: 'Open Sans Bold';
+    flex: 2;
+}
+.description-text.regular{
+    flex: 1;
 }
 .more{
     font-family: 'Open Sans';
@@ -173,7 +177,7 @@
     color: #4B566B;
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 10px 0px;
     border: none;
     border-radius: 10px;
 
@@ -192,23 +196,28 @@
 }
 .pay-container{
     display: flex;
-    width: 100%;
-    justify-content: flex-end;
     height: 175px;
+    width: 100%;
+    align-items: center;
+    justify-content: flex-end;
+    height: fit-content;
 }
 .pay-steps-container{
     display: flex;
     justify-content: space-around;
+    height: fit-content;
     position: relative;
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    min-width: 380px;
+    min-width: 280px;
+    height: fit-content;
     border-radius: 10px;
     flex: 3;
 
 }
 .pay-steps{
-    height: 100%;
+    min-height: 175px;
+    min-width: 120px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -216,9 +225,10 @@
     flex: 1;
     padding: 0px 20px;
     position: relative;
+    overflow: hidden;
 }
 .pay-steps.first{
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
     clip-path: inset(0px -15px 0px 0px);
     z-index: 2;
 }
@@ -241,12 +251,26 @@
     color: #FFD300;
     font-size: 50px;
     font-weight: 900;
-    z-index: 99;
+    z-index: 1;
     top: 50%;
     left: -3px;
     line-height: 0;
     text-align: center;
     z-index: 1;
+}
+.steps-downArrow{
+    position: absolute;
+    color: #FFD300;
+    font-size: 30px;
+    z-index: 1;
+    top: -13px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    line-height: 0;
+    text-align: center;
+    display: none;
 }
 .pay-credit-button{
     position: absolute;
@@ -266,6 +290,7 @@
     align-items: center;
     gap: 20px;
     z-index: 2;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
 .pay-credit-button i{
     width: 35px;
@@ -281,34 +306,35 @@
 }
 .payBanner-container{
     flex: 1;
-    min-width: 130px;
-    height: 100%;
-    background-color: #2B3445;
     position: relative;
-
+    max-width: 230px;
+    min-width: 230px;
+    height: fit-content;
 }
 .payBanner{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 200px;
 }
 .payBanner-left{
-    width: 175px;
-    height: 175px;
+    width: 200px;
+    max-width: 200px;
+    height: 200px;
     border-bottom: 3px solid #013E9B;
     border-left: 3px solid #013E9B;
     border-top: none;
     border-right: none;
     border-radius: 50%;
     position: absolute;
-    top: 10%;
-    left: -50%;
+    bottom: -15%;
+    left: -60%;
     display: flex;
     justify-content: center;
     align-items: center;
     line-height: 10px;
+    z-index: 3;
 }
 .payBanner-circle{
     width: 95%;
@@ -319,11 +345,129 @@
     justify-content: center;
     align-items: center;
     font-family: 'Open Sans Bold';
-    font-size: 60px;
+    font-size: 50px;
+    color: #013E9B;
 }
-@media (max-width: 950px){
+.payBanner-right{
+    background-color: #004AC1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 20px;
+    border-radius: 30px;
+    clip-path: polygon(100% -5%, 100% 0%, 100% 100%, -150% 100%);
+}
+.payBanner-right p{
+    margin: 0;
+    color: white;
+}
+.payBanner-text-small{
+    font-family: 'Open Sans';
+    font-size: 12px;
+    line-height: 0;
+    width: 90px;
+}
+.payBanner-price{
+    line-height: 0.9;
+    width: 100%;
+    text-align: end;
+    font-family: 'Impact';
+    font-weight: 400;
+    font-size: 55px;
+}
+.price-long{
+    font-size: 66px;
+}
+.payBanner-text{
+    width: 100%;
+    text-align: end;
+    font-family: 'Open Sans';
+    font-size: 20px;
+    line-height: 2;
+    height: 70px;
+}
+.payBaner-bg{
+    position: absolute;
+    width: 100%;
+    height: 95%;
+    top: 0;
+    right: 0;
+    bottom: -15px;
+    left: 0;
+    margin: auto;
+    border: 2px solid #4B566B;
+    border-radius: 20px;
+    display: flex;
+    justify-content: flex-end;
+    transform: rotate(-25deg);
+}
+.payBaner-bg p{
+    margin: 0;
+    font-size: 70px;
+    color: #013E9B;
+    height: fit-content;
+    line-height: 0;
+    padding: 0 10px;
+    letter-spacing: -5px;
+}
+.product-detail-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1;
+}
+.product-images-container{
+    display: flex;
+    flex-wrap: wrap;
+    flex: 2;
+}
+.product-detail-image{
+    width: 373px;
+    height: auto;
+}
+.subtitle-container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 20px 0px;
+}
+.product-information{
+    width: 100%;
+    display: flex;
+    gap: 20px;
+}
+.product-information-container{
+    flex: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.product-top-menu{
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    padding: 20px 0px;
+}
+@media (max-width: 1200px){
+    .pay-container{
+        flex-direction: column;
+    }
+    .productDescription-container{
+        flex-direction: column;
+    
+    }
+    
     .productDescription-gallery{
+        justify-content: flex-start;
         flex-wrap: wrap;
+        min-width: 350px;
+    }
+    .productDescription{
+        min-width: 350px;
     }
     .gallery-images-container{
         flex-direction: row;
@@ -335,7 +479,7 @@
     .imageFocus-container{
         width: 100%;
         height: auto;
-    }
+    } 
     .imageFocus-gallery {
         width: 100%;
         height: auto;
@@ -344,6 +488,8 @@
         width: 100px;
         height: 100px;
     }
+}
+@media (max-width: 950px){
     .product-description-container{
         flex-wrap: wrap;
     }
@@ -351,20 +497,47 @@
         font-size: 30px;
     }
     .pay-steps-container{
-        min-width: auto;
+        flex-direction: column;
     }
     .pay-container{
         flex-wrap: wrap;
-    }
-    .payBanner-container{
-        min-width: 100%;
-    }
-    .pay-steps-container{
-        flex-direction: column;
+        margin: 20px 0px;
+        justify-content: center;
     }
     .securePay-button{
         width: 100%;
-        padding: 0;
+        height: fit-content;
+    }
+    .pay-steps{
+        align-items: center;
+    }
+    .pay-steps.first{
+        clip-path: inset(0px 0px -15px 0px);
+    }
+    .steps-downArrow{
+        display: block;
+    }
+    .steps-rightArrow{
+        display: none;
     }
     
+}
+@media (max-width: 720px){
+    
+    .pay-container{
+        align-items: center;
+    }
+    .pay-steps-container{
+        width: 100%;
+    }
+}
+@media (max-width: 450px){
+    .payBanner-left{
+        width: 150px;
+        height: 150px;
+        left: -25%;
+    }
+    .payBanner-circle{
+        font-size: 40px;
+    }
 }
