--- a/src/Routes/Product.css
+++ b/src/Routes/Product.css
@@ -158,7 +158,7 @@
     flex: 1;
 }
 .more{
-    font-family: 'Open Sans';
+    font-family: 'Open Sans Italic';
     font-size: 16px;
     color: #004AC1;
 }
@@ -439,19 +439,13 @@
     display: flex;
     gap: 20px;
 }
-.product-information-container{
-    flex: 1;
-    width: 100%;
+.subtitle-container.center{
     display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-.product-top-menu{
-    display: flex;
-    gap: 20px;
+    justify-content: center;
     width: 100%;
-    padding: 20px 0px;
 }
+
+
 @media (max-width: 1200px){
     .pay-container{
         flex-direction: column;
